--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,3 +15,14 @@ main {
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.39);
 }
+h1 {
+    font-size: 2em;
+    color: rgb(58, 0, 102);
+}
+h2 {
+    font-size: 1.5em;
+    color: rgb(58, 0, 102);
+}
+img.lado {
+    float: right;
+}
